# video-booth-test

./: .gitignore  pnpm-lock.yaml
backend/: app.py  pyproject.toml  record_video.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/routes/: home.tsx
src/: index.css  types.d.ts
src/routes/: home.tsx
