[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "tom-pilotschool",email = "tom@pilotschool.io"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-socketio (>=5.5.1,<6.0.0)"
]
[tool.poetry.packages]
backend = { include = "backend" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
